--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^0.27.0",
     "framer-motion": "^6",
     "millify": "^4.0.0",
+    "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
